--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,7 @@ body {
 
 .square {
   background: #fff;
-  border: 1px solid #999;
+  border: 1px solid #d46767;
   float: left;
   font-size: 24px;
   font-weight: bold;
