--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,200&display=swap');
+
+
 * {
   box-sizing: border-box; 
 }
@@ -89,7 +92,33 @@ body {
   margin-left: 20px;
 }
 
+input{
+  border-radius: 50px;
+  border: none;
+  background-color: rgb(70, 70, 70);
+  height: 60px;
+  width: 250px;
+  padding-left: 20px;
+  margin-top: 20px;
+  margin-left: 30%;
+  display: block;
+}
+
+.inpGroup{
+  margin-top: 60px;
+}
+
 .allC{
+  background-color: rgb(250, 250, 250);
+  width: 600px;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 7px;
+}
+
+.allL{
   background-color: rgb(250, 250, 250);
   width: 600px;
   height: 400px;
