--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 
 
 * {
-  box-sizing: border-box; 
+  box-sizing: border-box;
+  font-family: 'Poppins' sans-serif; 
 }
 
 body {
@@ -118,8 +119,9 @@ input{
   border-radius: 7px;
 }
 
-.allL{
-  background-color: rgb(250, 250, 250);
+.allI{
+  background-color: white;
+ box-shadow: 0 10px 10px rgba(219, 219, 219, 0.1);
   width: 600px;
   height: 400px;
   justify-content: center;
